fixed alignment trying

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -7,23 +7,29 @@ i.icon{
 }
 
 .container.main{
-	margin-top: 7em;
+	margin-top: 4em;
 }
 
 .parallaxCoverL {
-    /* The image used */
+	position: fixed;
+	width: 100%;
+	height: 100%;
 	background: url("https://i.imgur.com/mQRBAmT.jpg") no-repeat;
-    /* Set a specific height */
-    /* Create the parallax scrolling effect */
-    background-size: contain;
-	background-attachment: fixed;
+	background-size: cover;
+	will-change: transform;
+	z-index: -1;
 }
 
 .parallaxCoverR {
-    /* The image used */
-	background: url("https://i.imgur.com/Pt6APOB.jpg") no-repeat;
-    /* Set a specific height */
-    /* Create the parallax scrolling effect */
-    background-size: contain;
-	background-attachment: fixed;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	background: url("https://i.imgur.com/uxxBGXt.jpg") no-repeat;
+	background-size: cover;
+	will-change: transform;
+	z-index: -1;
+}
+
+#midContainer{
+	overflow: hidden;
 }
